--- a/playground/index.html
+++ b/playground/index.html
@@ -14,6 +14,8 @@
 
         <script>
 
+            let playground;
+
             document.addEventListener('DOMContentLoaded', () => {
 
                 let cnv = document.getElementById('cnv');
@@ -42,7 +44,7 @@
                     return {graph: new GraphTheory.DirectedGraph(vertices, edges), coords: vertices_coords};
                 }
 
-                let playground = new PlayGround.PlayGround(cnv, true);
+                playground = new PlayGround.PlayGround(cnv, true);
 
                 let resize = () => {
                     cnv.width = window.innerWidth;
