--- a/playground/index.html
+++ b/playground/index.html
@@ -44,7 +44,7 @@
                     return {graph: new GraphTheory.DirectedGraph(vertices, edges), coords: vertices_coords};
                 }
 
-                playground = new PlayGround.PlayGround(cnv, false);
+                playground = new PlayGround.PlayGround(cnv, true);
 
                 let resize = () => {
                     cnv.width = window.innerWidth;
